--- a/patches/4D5307F1 - Fable II (1), Tu4.patch.toml
+++ b/patches/4D5307F1 - Fable II (1), Tu4.patch.toml
@@ -7,6 +7,7 @@ hash = "42FFBA85DA590339" # default.xex
 #    "28173C4E", # Disc (Japan):       http://redump.org/disc/75492
 #    "6473199D", # Disc (USA, Europe): http://redump.org/disc/12484
 #    "6BC95506", # Disc (Russia):      http://redump.org/disc/75396
+#    "609F3344", # Disc (Mexico):
 #]
 
 [[patch]]
@@ -15,7 +16,7 @@ hash = "42FFBA85DA590339" # default.xex
     is_enabled = false
 
     [[patch.be8]]
-        address = 0x82b6422b
+        address = 0x82ba34bb
         value = 0x01
 
 [[patch]]
@@ -25,7 +26,7 @@ hash = "42FFBA85DA590339" # default.xex
     is_enabled = false
 
     [[patch.be16]]
-        address = 0x82311d9a
+        address = 0x82389022
         value = 0x0500
 
 [[patch]]
@@ -34,7 +35,7 @@ hash = "42FFBA85DA590339" # default.xex
     is_enabled = false
 
     [[patch.be8]]
-        address = 0x82311d7f
+        address = 0x82389007
         value = 0x01
 
 [[patch]]
@@ -43,10 +44,10 @@ hash = "42FFBA85DA590339" # default.xex
     is_enabled = false
 
     [[patch.be32]]
-        address = 0x8209c9ac
+        address = 0x8209fddc
         value = 0x3fe38e39
     [[patch.be32]]
-        address = 0x8209c9b0
+        address = 0x8209fe64
         value = 0x4017b426
 
 [[patch]]
@@ -55,8 +56,8 @@ hash = "42FFBA85DA590339" # default.xex
     is_enabled = false
 
     [[patch.be32]]
-        address = 0x8209c9ac
+        address = 0x8209fddc
         value = 0x4017b426
     [[patch.be32]]
-        address = 0x8209c9b0
+        address = 0x8209fe64
         value = 0x40638e39
