--- a/patches/425307E6 - The Elder Scrolls V Skyrim.patch.toml
+++ b/patches/425307E6 - The Elder Scrolls V Skyrim.patch.toml
@@ -2,6 +2,7 @@ title_name = "The Elder Scrolls V: Skyrim" # 5
 title_id = "425307E6" # BS-2022
 hash = "4EA242EA99AD16F0" # default.xex
 #media_id = "34F5B6C3" # Disc (USA, Europe): http://redump.org/disc/37091
+#media_id = "49A1477A" # Disc (Europe): http://redump.org/disc/72057
 
 [[patch]]
     name = "60 FPS"
@@ -10,5 +11,5 @@ hash = "4EA242EA99AD16F0" # default.xex
     is_enabled = false
 
     [[patch.be8]]
-        address = 0x822b7643
+        address = 0x82356783
         value = 0x01
